feat: fix authProvider supabase

--- a/.env.production
+++ b/.env.production
@@ -7,7 +7,11 @@ SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Redis Configuration
-REDIS_URL=redis://your-redis-url:6379
+# REDIS_URL=redis://red-d1nrp76r433s738jmih0:fjuIRP7AB2nVaTG0OTuGeOb3mWgRfYjj@red-d1nrp76r433s738jmih0:6379
+REDIS_HOST=red-d1nrp76r433s738jmih0
+REDIS_PORT=6379
+REDIS_PASSWORD=fjuIRP7AB2nVaTG0OTuGeOb3mWgRfYjj
+REDIS_SSL=true
 
 # Encryption
 FERNET_KEY=your-fernet-key
