--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.2",
+    "@codemirror/view": "^6.38.0",
     "@hookform/resolvers": "^5.0.1",
     "@next/third-parties": "^15.3.1",
     "@number-flow/react": "^0.5.7",
